...
    private var searchViewModel = SearchViewModel()
    
    // MARK: - UIComponents
    
    let searchButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Buscar", for: .normal)
        button.setTitleColor(.meliWhite, for: .normal)
        button.setTitleColor(.meliLightGrey, for: .disabled)
        button.layer.cornerRadius = 3
        button.isEnabled = false
        button.backgroundColor = .meliBlueLight
        button.heightAnchor.constraint(equalToConstant: 40).isActive = true
        button.addTarget(self, action: #selector(handleSearchButton), for: .touchUpInside)
        return button
    }()
    
    let searchTextField: CustomTextField = {
        let textField = CustomTextField(padding: 15, height: 44)
        textField.placeholder = "Buscar en Mercado Libre"
        textField.keyboardType = .alphabet
        textField.backgroundColor = .meliWhite
        textField.addLine(position: .bottom, color: .meliMidGrey, width: 1.3)
        textField.addTarget(self, action: #selector(handleTextChange), for: .editingChanged)
        return textField
    }()
...
